spade-tests/src/snapshots/spade_tests__wordlength_inference__multiple_generics_ia.snap
---
source: spade-tests/src/wordlength_inference.rs
---
fn f<a, b>(a: int<a>, b: int<b>) -> int<b> {
  a + b
}

entity main(clk: clock, rst: bool) -> int<0> {
  let x: int<5> = f(0, 10);
  let y: int<5> = f(1, 10);
  0
}


error: 
  ┌─ testinput:8:3
  │
8 │   0
  │   ^ This expression requires 2 bits but the typechecker claims it needs 0 bits


